log
Sun, May  4, 2025  8:09:27 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Sun, May  4, 2025  8:10:31 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3e8e527
Sun, May  4, 2025  8:13:03 PM: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
9a8e378
Sun, May  4, 2025  8:13:24 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
8578e72
Sun, May  4, 2025  8:13:32 PM: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
92a8a16
Sun, May  4, 2025  8:14:06 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
01a03b8
Sun, May  4, 2025  8:16:40 PM: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
f10f9ab
Sun, May  4, 2025  8:17:21 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
c54c8f1
Sun, May  4, 2025  8:18:25 PM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
dcd03d4
Sun, May  4, 2025  8:19:53 PM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
cbbc906
